--- a/src/styles.css
+++ b/src/styles.css
@@ -86,13 +86,15 @@ footer.starCount {
   font-weight: 600;
   position:absolute;
   left: 50;
-
+  
 }
 
 
 .footer .str-btn {
-  width: 7px;
-  height: 7px
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 .footer button {
   font-size: 15px;
@@ -101,8 +103,6 @@ footer.starCount {
   border-radius: 3px;
   border: none;
   font-weight: 600;
-  
- 
 }
 .favourite-btn {
   background-color: #bc16dd;
